# CRM_Collection

./: .gitignore  README.md  pyproject.toml
app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py  services.py
app/routers/: accounts.py  auth.py  communications.py  dashboard.py  debtors.py  payments.py  tasks.py
tests/: test_api.py
